# democrata

./: .env.example  .gitignore  Makefile  README.md  SPEC.md  buf.gen.yaml  docker-compose.supabase.yml  docker-compose.yml  package.json  pnpm-lock.yaml
server/: Dockerfile  README.md  pyproject.toml
server/config/: scrape_au.yaml
server/src/democrata_server/: main.py  worker.py
server/src/democrata_server/adapters/agents/: __init__.py  extractor.py  planner.py  verifier.py
server/src/democrata_server/adapters/extraction/: pdf.py
server/src/democrata_server/adapters/llm/: __init__.py  config.py  factory.py  ollama_embedder.py  token_counter.py
server/src/democrata_server/adapters/scrapers/: __init__.py  configurable_http.py
server/src/democrata_server/adapters/storage/: __init__.py  postgres.py  s3.py
server/src/democrata_server/adapters/usage/: __init__.py  redis_job_store.py  redis_session_store.py
server/src/democrata_server/api/: __init__.py
server/src/democrata_server/api/http/: deps.py
server/src/democrata_server/domain/: __init__.py
server/src/democrata_server/domain/agents/: entities.py  ports.py
server/src/democrata_server/domain/auth/: entities.py  ports.py
server/src/democrata_server/domain/billing/: entities.py
server/src/democrata_server/domain/ingestion/: __init__.py  entities.py  ports.py  scrape_use_cases.py  (+1 more)
server/src/polly_pipeline_server/: __init__.py  main.py
server/src/polly_pipeline_server/adapters/: __init__.py
server/tests/: test_agents.py  test_api.py  test_domain.py  test_llm_factory.py  test_main.py
(+99 files in other folders)
